--- a/res/layout/f_func_title_03.xml
+++ b/res/layout/f_func_title_03.xml
@@ -5,14 +5,14 @@
 	style="@style/func_grouptitle_linearlayout_style" 
     >
     <ImageView 
-        android:src="@drawable/f_03"
+        android:src="@drawable/f_033"
 		style="@style/func_grouptitle_imageview_style" 
 		android:contentDescription="@string/image_description"
         />
-    <TextView
+  <!--   <TextView
         android:text="@string/menu_level_03"
 		style="@style/func_grouptitle_textview_style" 
-        />
+        /> -->
 </LinearLayout>
 
 	
