--- a/res/layout/f_func_title_04.xml
+++ b/res/layout/f_func_title_04.xml
@@ -5,14 +5,14 @@
 	style="@style/func_grouptitle_linearlayout_style" 
     >
     <ImageView 
-        android:src="@drawable/f_04"
+        android:src="@drawable/f_044"
 		style="@style/func_grouptitle_imageview_style" 
 		android:contentDescription="@string/image_description"
         />
-    <TextView
+   <!--  <TextView
         android:text="@string/menu_level_04"
 		style="@style/func_grouptitle_textview_style" 
-        />
+        /> -->
 </LinearLayout>
 
 	
