--- a/res/layout/f_func_title_05.xml
+++ b/res/layout/f_func_title_05.xml
@@ -5,14 +5,14 @@
 	style="@style/func_grouptitle_linearlayout_style" 
     >
     <ImageView 
-        android:src="@drawable/f_05"
+        android:src="@drawable/f_055"
 		style="@style/func_grouptitle_imageview_style" 
 		android:contentDescription="@string/image_description"
         />
-    <TextView
+    <!-- <TextView
         android:text="@string/menu_level_05"
 		style="@style/func_grouptitle_textview_style" 
-        />
+        /> -->
 </LinearLayout>
 
 	
